fix issue with media indicator being positioned slightly too low

--- a/rb/static/widget-new/src/css/media-indicator-widget.css
+++ b/rb/static/widget-new/src/css/media-indicator-widget.css
@@ -37,7 +37,7 @@
 .antenna-media-indicator-widget .antenna-reaction-total {
     visibility: hidden;
     font-size: 11px;
-    line-height: 16px;
+    line-height: 1em;
     vertical-align: middle;
 }
 
